virt01/manual/tools/pdns-admin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pdns-admin-svc
  labels:
    app: pdns-admin
spec:
  ports:
    - name: pdns-admin-svc-port
      port: 80
  selector:
    app: pdns-admin
