virt01/manual/tools/pdns-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdns-admin-ingress
  namespace: tools
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.test.nf.lab
spec:
  rules:
  - host: pdns.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: pdns-admin-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pdns.k3s.nf.lab
    secretName: pdns-admin-tls
